Alterar cor do nav-menu

--- a/index.html
+++ b/index.html
@@ -18,12 +18,13 @@
 
 </head>
 <body>
-    <!-- seção menu navbar -->
+
+    <!-- Início da seção menu navbar -->
     <header>
 
         <div id="menu" class="fas fa-bars"></div>
 
-        <a href="#" class="logo"><i class="fas fa-user-graduate">Logo</i></a>
+        <a href="#" class="logo"><i class="fas fa-user-graduate"></i></a>
 
         <nav class="navbar">
             <ul>
@@ -38,7 +39,7 @@
         <div id="login" class="fas fa-user-circle"></div>
 
     </header>
-    <!-- Fim da seção menu -->
+    <!-- Fim da seção menu navbar -->
 
     <script src="script.js"></script>
 </body>
