Corrige item nav-menu contato

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 <li><a href="#course">cursos</a></li>
                 <li><a href="#teacher">professores</a></li>
                 <li><a href="#about">sobre</a></li>
-                <li><a href="#contact"contato></a></li>
+                <li><a href="#contact">contato</a></li>
             </ul>
         </nav>
 
