Cria formulario com modal

--- a/index.html
+++ b/index.html
@@ -41,6 +41,21 @@
     </header>
     <!-- Fim da seção menu navbar -->
 
-    <script src="script.js"></script>
+    <!-- Inicio form Login -->
+        <div class="login-form">
+            <form action="">
+                <h3>login</h3>
+                <input type="text" placeholder="insira seu RA" class="box">
+                <input type="password" placeholder="insira sua senha" class="box">
+                <p>esqueceu a senha? <a href="#">clique aqui</a></p>
+                <p>não tem uma conta? <a href="#">cadastre-se agora</a></p>
+                <input type="submit" class="btn" value="login">
+                <i class="fas fa-times"></i>
+            </form>
+        </div>
+    <!-- Fim form Login -->
+    
+    <script src="menu.js"></script>
+    <script src="modal.js"></script>
 </body>
 </html>
