Cria seção Home

--- a/index.html
+++ b/index.html
@@ -42,19 +42,29 @@
     <!-- Fim da seção menu navbar -->
 
     <!-- Inicio form Login -->
-        <div class="login-form">
-            <form action="">
-                <h3>login</h3>
-                <input type="text" placeholder="insira seu RA" class="box">
-                <input type="password" placeholder="insira sua senha" class="box">
-                <p>esqueceu a senha? <a href="#">clique aqui</a></p>
-                <p>não tem uma conta? <a href="#">cadastre-se agora</a></p>
-                <input type="submit" class="btn" value="login">
-                <i class="fas fa-times"></i>
-            </form>
-        </div>
+    <div class="login-form">
+        <form action="">
+            <h3>login</h3>
+            <input type="text" placeholder="insira seu RA" class="box">
+            <input type="password" placeholder="insira sua senha" class="box">
+            <p>esqueceu a senha? <a href="#">clique aqui</a></p>
+            <p>não tem uma conta? <a href="#">cadastre-se agora</a></p>
+            <input type="submit" class="btn" value="login">
+            <i class="fas fa-times"></i>
+        </form>
+    </div>
     <!-- Fim form Login -->
     
+    <!-- Inicio seção Home -->
+    <section id="home" class="home">
+        <h1>Educação para Todos</h1>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iste dolore ad obcaecati, itaque consequatur
+            reprehenderit fuga facere accusamus minus harum libero nihil similique placeat modi at rem nam nobis
+            quaerat?</p>
+        <a href="#"><button class="btn"> Iniciar </button></a>
+    </section>
+    <!-- Fim seção Home -->
+
     <script src="menu.js"></script>
     <script src="modal.js"></script>
 </body>
