Cria seção sobre

--- a/index.html
+++ b/index.html
@@ -29,10 +29,10 @@
         <nav class="navbar">
             <ul>
                 <li><a href="#home">início</a></li>
-                <li><a href="#course">cursos</a></li>
-                <li><a href="#teacher">professores</a></li>
-                <li><a href="#about">sobre</a></li>
-                <li><a href="#contact">contato</a></li>
+                <li><a href="#cursos">cursos</a></li>
+                <li><a href="#professores">professores</a></li>
+                <li><a href="#sobre">sobre</a></li>
+                <li><a href="#contato">contato</a></li>
             </ul>
         </nav>
 
@@ -64,6 +64,26 @@
         <a href="#"><button class="btn"> Iniciar </button></a>
     </section>
     <!-- Fim seção Home -->
+
+    <!-- Inicio seção Sobre -->
+    <section id="sobre" class="sobre">
+
+        <div class="image">
+            <img src="utils/Nerd-amico.svg" alt="Estudante Tecnologia">
+        </div>
+
+        <div class="content">
+            <h3>Quem somos nós?</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi perspiciatis sequi mollitia alias nobis
+                fugit quo facere voluptatum modi, inventore perferendis nihil. Error, iure? Nesciunt repellendus ullam
+                animi labore in?</p>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quo veritatis reiciendis, rerum, accusamus nam
+                ratione voluptate distinctio est rem autem aliquid illo expedita nulla corrupti exercitationem
+                aspernatur! Iure, libero magnam!</p>
+            <a href="#"><button class="btn"> leia mais</button></a>
+        </div>
+    </section>
+    <!-- Fim seção Sobre -->
 
     <script src="menu.js"></script>
     <script src="modal.js"></script>
