Cria seção Professores

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <nav class="navbar">
             <ul>
                 <li><a href="#home">início</a></li>
-                <li><a href="#curso">cursos</a></li>
+                <li><a href="#cursos">cursos</a></li>
                 <li><a href="#professores">professores</a></li>
                 <li><a href="#sobre">sobre</a></li>
                 <li><a href="#contato">contato</a></li>
@@ -72,7 +72,7 @@
     <!-- Fim seção Home -->
     
     <!-- Inicio seção Curso -->
-    <section  id="curso" class="curso">
+    <section  id="cursos" class="curso">
         <h3 class="titulo"> cursos populares </h3>
         <div class="box-container">
             <!-- <div class="box">
@@ -103,6 +103,25 @@
     </section>
     <!-- Fim seção Curso -->
 
+    <!-- Inicio seção Professores -->
+    <section id="professores" class="professor" >
+
+        <div class="content">
+            <h3>nossos professores</h3>
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Non ut delectus harum, consectetur fuga est
+                cupiditatevel. Accusamus, est non provident tempora fuga natus unde. Excepturi cupiditate vero optio tempora!
+                Excepturi cupiditate vero optio tempora!, Excepturi cupiditate vero optio tempora!
+            </p>
+            <a href="#"><button class="btn">leia mais</button></a>
+        </div>
+
+        <div class="image">
+            <img src="utils/teacher.svg" alt="Estudante Tecnologia">
+        </div>
+
+    </section>
+    <!-- Fim seção Professores -->
+
     <!-- Inicio seção Sobre -->
     <section id="sobre" class="sobre">
 
@@ -113,8 +132,11 @@
         <div class="content">
             <h3>Quem somos nós?</h3>
             <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Accusantium eligendi cum quibusdam quae autem
-                fugiat quidem quo fuga magnam, et aperiam id vitae maxime. Inventore quas voluptate omnis enim
-                voluptates!</p>
+                fugiat quidem quo fuga magnam, et aperiam id vitae maxime. Inventore quas voluptate omnis enim voluptates!
+            </p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex itaque culpa nihil sint vero nostrum omnis
+                illum maiores. Ex earum maiores pariatur architecto repellat facere illo temporibus deserunt quo sed!
+            </p>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex itaque culpa nihil sint vero nostrum omnis
                 illum maiores. Ex earum maiores pariatur architecto repellat facere illo temporibus deserunt quo sed!
             </p>
