Cria seção Formulario

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 
     <!-- Inicio seção Home -->
     <section id="home" class="home">
-        <h1>Educação para Todos</h1>
+        <h1>IPTI - Educação para Todos</h1>
         <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Deleniti unde nihil quia veritatis iste, aspernatur
             enim dolores sint hic, labore eligendi tenetur sit ducimus voluptatibus esse nemo. Dignissimos, quo autem!
         </p>
@@ -145,6 +145,31 @@
     </section>
     <!-- Fim seção Sobre -->
 
+    <!--  Inicio seção Contato -->
+    <section class="contato" id="contato">
+
+    <div class="row">
+
+        <div class="form">
+            <h3>fale conosco</h3>
+
+            <form action="">
+                <input type="text" placeholder="seu nome" class="box">
+                <input type="email" placeholder="seu email" class="box">
+                <input type="text" placeholder="seu endereço" class="box">
+                <input type="number" placeholder="seu telefone" class="box">
+                <textarea name="" id="" cols="30" rows="10" class="box address" placeholder="sua mensagem"></textarea>
+                <input type="submit" class="btn" value="enviar">
+            </form>
+       </div>
+
+        <div class="image">
+            <img src="utils/contact-img.png" alt="Contato">
+        </div>
+    </div>
+
+    </section>
+    <!-- Fim seção Contato -->
    
     <script src="menu.js"></script>
     <script src="modal.js"></script>
