Cria seção Fomulario Responsiva

--- a/index.html
+++ b/index.html
@@ -112,6 +112,10 @@
                 cupiditatevel. Accusamus, est non provident tempora fuga natus unde. Excepturi cupiditate vero optio tempora!
                 Excepturi cupiditate vero optio tempora!, Excepturi cupiditate vero optio tempora!
             </p>
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Non ut delectus harum, consectetur fuga est
+                cupiditatevel. Accusamus, est non provident tempora fuga natus unde. Excepturi cupiditate vero optio tempora!
+                Excepturi cupiditate vero optio tempora!, Excepturi cupiditate vero optio tempora!
+            </p>
             <a href="#"><button class="btn">leia mais</button></a>
         </div>
 
