Cria seção Footer

--- a/index.html
+++ b/index.html
@@ -27,14 +27,12 @@
         <div id="menu" class="fas fa-bars"></div>
 
         <a href="#" class="logo">
-           <!--  <i class="fas fa-user-graduate"></i> -->   
-           <!-- <i class="fas fa-user-graduate"></i> -->
-           <img class='ipti-logo' src="/utils/logo.png" alt="Logo Empresa IPTI">
+            <img class='ipti-logo' src="/utils/logo.png" alt="Logo Empresa IPTI">
         </a>
 
         <nav class="navbar">
             <ul>
-                <li><a href="#home">início</a></li>
+                <li><a href="#inicio">início</a></li>
                 <li><a href="#cursos">cursos</a></li>
                 <li><a href="#professores">professores</a></li>
                 <li><a href="#sobre">sobre</a></li>
@@ -62,7 +60,7 @@
     <!-- Fim form Login -->
 
     <!-- Inicio seção Home -->
-    <section id="home" class="home">
+    <section id="inicio" class="home">
         <h1>IPTI - Educação para Todos</h1>
         <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Deleniti unde nihil quia veritatis iste, aspernatur
             enim dolores sint hic, labore eligendi tenetur sit ducimus voluptatibus esse nemo. Dignissimos, quo autem!
@@ -70,9 +68,9 @@
         <a href="#"><button class="btn"> Iniciar </button></a>
     </section>
     <!-- Fim seção Home -->
-    
+
     <!-- Inicio seção Curso -->
-    <section  id="cursos" class="curso">
+    <section id="cursos" class="curso">
         <h3 class="titulo"> cursos populares </h3>
         <div class="box-container">
             <!-- <div class="box">
@@ -104,18 +102,21 @@
     <!-- Fim seção Curso -->
 
     <!-- Inicio seção Professores -->
-    <section id="professores" class="professor" >
+    <section id="professores" class="professor">
 
         <div class="content">
             <h3>nossos professores</h3>
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Non ut delectus harum, consectetur fuga est
-                cupiditatevel. Accusamus, est non provident tempora fuga natus unde. Excepturi cupiditate vero optio tempora!
-                Excepturi cupiditate vero optio tempora!, Excepturi cupiditate vero optio tempora!
+            <p>
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Non ut delectus harum, consectetur fuga est
+                cupiditatevel. Accusamus, est non provident tempora fuga natus unde. Excepturi cupiditate vero optio
+                tempora. Excepturi cupiditate vero optio tempora. 
             </p>
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Non ut delectus harum, consectetur fuga est
-                cupiditatevel. Accusamus, est non provident tempora fuga natus unde. Excepturi cupiditate vero optio tempora!
-                Excepturi cupiditate vero optio tempora!, Excepturi cupiditate vero optio tempora!
+            <p>
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Non ut delectus harum, consectetur fuga est
+                cupiditatevel. Accusamus, est non provident tempora fuga natus unde. Excepturi cupiditate vero optio
+                tempora. Excepturi cupiditate vero optio tempora. 
             </p>
+            
             <a href="#"><button class="btn">leia mais</button></a>
         </div>
 
@@ -136,7 +137,8 @@
         <div class="content">
             <h3>Quem somos nós?</h3>
             <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Accusantium eligendi cum quibusdam quae autem
-                fugiat quidem quo fuga magnam, et aperiam id vitae maxime. Inventore quas voluptate omnis enim voluptates!
+                fugiat quidem quo fuga magnam, et aperiam id vitae maxime. Inventore quas voluptate omnis enim
+                voluptates!
             </p>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex itaque culpa nihil sint vero nostrum omnis
                 illum maiores. Ex earum maiores pariatur architecto repellat facere illo temporibus deserunt quo sed!
@@ -152,29 +154,58 @@
     <!--  Inicio seção Contato -->
     <section class="contato" id="contato">
 
-    <div class="row">
+        <div class="row">
 
-        <div class="form">
-            <h3>fale conosco</h3>
+            <div class="form">
+                <h3>fale conosco</h3>
 
-            <form action="">
-                <input type="text" placeholder="seu nome" class="box">
-                <input type="email" placeholder="seu email" class="box">
-                <input type="text" placeholder="seu endereço" class="box">
-                <input type="number" placeholder="seu telefone" class="box">
-                <textarea name="" id="" cols="30" rows="10" class="box address" placeholder="sua mensagem"></textarea>
-                <input type="submit" class="btn" value="enviar">
-            </form>
-       </div>
+                <form action="">
+                    <input type="text" placeholder="seu nome" class="box">
+                    <input type="email" placeholder="seu email" class="box">
+                    <input type="text" placeholder="seu endereço" class="box">
+                    <input type="number" placeholder="seu telefone" class="box">
+                    <textarea name="" id="" cols="30" rows="10" class="box address"
+                        placeholder="sua mensagem"></textarea>
+                    <input type="submit" class="btn" value="enviar">
+                </form>
+            </div>
 
-        <div class="image">
-            <img src="utils/contact-img.png" alt="Contato">
+            <div class="image">
+                <img src="utils/contact-img.png" alt="Contato">
+            </div>
         </div>
-    </div>
 
     </section>
     <!-- Fim seção Contato -->
-   
+
+    <!-- Inicio seção Footer -->
+    <div class="footer">
+        <div class="box-container">
+
+            <div class="box">
+                <h3>links úteis</h3>
+                <a href="#inicio">início</a>
+                <a href="#cursos">cursos</a>
+                <a href="#professores">professores</a>
+                <a href="#sobre">sobre</a>
+                <a href="#contato">contato</a>
+            </div>
+
+            <div class="box">
+                <h3>informações de contato</h3>
+                <p><i class="fas fa-map-marker-alt"></i> São paulo, Brasil | Paulista nº 978  </p>
+                <p><i class="fas fa-envelope"></i> contato@ipti.com.br </p>
+                <p><i class="fas fa-phone"></i> + 55 (11) 4887-8553 </p>
+                <p><i class="fas fa-phone"></i> + 55 (11) 7898-2438 </p>
+            </div>
+        </div>
+
+        <h1 class="credit"> feito com &#128156 by
+            <a href="#">IPTI INC</a> todos os direitos reservados.
+        </h1>
+    </div>
+    <!-- Fim seção Footer -->
+
     <script src="menu.js"></script>
     <script src="modal.js"></script>
     <script src="cards.js"></script>
