Corrigindo caminho do Logo

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <div id="menu" class="fas fa-bars"></div>
 
         <a href="#" class="logo">
-            <img class='ipti-logo' src="/utils/logo.png" alt="Logo Empresa IPTI">
+            <img class='ipti-logo' src="./utils/logo.png" alt="Logo Empresa IPTI">
         </a>
 
         <nav class="navbar">
@@ -74,7 +74,7 @@
         <h3 class="titulo"> cursos populares </h3>
         <div class="box-container">
             <!-- <div class="box">
-                <img src="utils/arduino.jpg" alt="Curso">
+                <img src="arduino.jpg" alt="Curso">
                 <h3 class="price">R$ 1,99</h3>
                 <div class="content">
                     <div class="stars">
